--- a/style.css
+++ b/style.css
@@ -81,10 +81,26 @@ header {
 header:hover {
     opacity: .9;
 }
-.logo {
-    font-size: 4rem;
-    font-weight: 800;
+.logo-tr {
+    font-size: 2rem;
+    font-weight: 400;
     color: var(--blue);
+    position: absolute;
+    top: 15px;
+    right: 60px;
+    z-index: 1000;
+    text-shadow: 0 6px 1px rgba(0,0,0,.1),
+    0 0 5px rgba(0,0,0,.1),
+    0 1px 3px rgba(0,0,0,.3),
+    0 3px 5px rgba(0,0,0,.2),
+    0 5px 10px rgba(0,0,0,.25),
+    0 10px 10px rgba(0,0,0,.2),
+    0 20px 20px rgba(0,0,0,.15);
+}
+.logo-en {
+    font-size: 2rem;
+    font-weight: 400;
+    color: white;
     position: absolute;
     top: 15px;
     right: 25px;
@@ -238,15 +254,34 @@ header #menu-bar {
     font-size: 3.5rem;
     color: #333;
     line-height: 1.25;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
+    text-align: justify;
 }
-.company .content p {
+
+.company .content blockquote {
+    display: flex;
+    justify-content: flex-end;
     font-size: 1.40rem;
+    font-weight: 500;
+    color: #333;
+    margin-bottom: 2rem;
+    line-height: 1.4;
+}
+
+.company .content p {
+    font-size: 1.8rem;
     font-weight: 500;
     color: #666;
     padding: 1rem 0;
     line-height: 1.4;
+    text-align: justify;
 }
+.company .content span {
+    
+    color: var(--blue);
+ 
+}
+
 .company .content .btn {
     padding: 1.3rem 5.5rem;
     font-size: 1.25rem;
@@ -322,6 +357,16 @@ header #menu-bar {
     line-height: 1.25;
     margin: 1rem 0;
 }
+
+.menu .content blockquote {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.6rem;
+    color: #666;
+    padding: 1rem 0;
+    line-height: 1.4;
+}
+
 .menu .content p {
     font-size: 1.6rem;
     color: #666;
