logo değişikliği, favicon ayarı

--- a/style.css
+++ b/style.css
@@ -696,10 +696,10 @@ header #menu-bar {
     justify-content: center;
 }
 .opening-logo h2 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Gill Sans",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--blue);
-    font-size: 4rem;
-    font-weight: 800;
+    font-size: 10rem;
+    font-weight: 500;
     transform: translateY(30px);
     z-index: 15;
     animation-name: content-center;
